src/rules/snapshots/pg_migration_lint__rules__pgm009__tests__drop_column_existing_table_fires.snap
---
source: src/rules/pgm009.rs
expression: findings
---
- rule_id: PGM009
  severity: Info
  message: "Dropping column 'legacy_status' from existing table 'orders'. The DDL is cheap but ensure no application code references this column."
  file: migrations/003.sql
  start_line: 1
  end_line: 1
